--- a/GUI/compiler/MainWindow.xaml
+++ b/GUI/compiler/MainWindow.xaml
@@ -7,12 +7,21 @@
         mc:Ignorable="d"
         Title="Compiler" Height="450" Width="800" Background="Gray">
     <Grid>
-        <TextBox x:Name="inputArea" HorizontalAlignment="Left" Height="298" Margin="6,8,0,0" TextWrapping="NoWrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="" VerticalAlignment="Top" Width="518"/>
-        <TextBox x:Name="errorArea" HorizontalAlignment="Left" Height="98" Margin="10,311,0,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="514" IsReadOnly="True" Background="#FFBFBFBF"/>
-        <TextBox x:Name="outputArea" HorizontalAlignment="Left" Height="368" Margin="529,8,0,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="253" IsReadOnly="True" Background="#FFBFBFBF"/>
-        <Button x:Name="symbolButton" Content="Symbol table" HorizontalAlignment="Left" Height="28" Margin="670,381,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.979,0.429" Click="symbolButton_Click" IsEnabled="False"/>
-        <Button x:Name="compileButton" Content="Compile" HorizontalAlignment="Left" Height="28" Margin="544,381,0,0" VerticalAlignment="Top" Width="100
-" Click="Compile_Button_Click"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="8*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBox x:Name="inputArea" Grid.Column="0" Grid.Row="0" Margin="5,8,5,5" TextWrapping="NoWrap" AcceptsReturn="True" AcceptsTab="True" VerticalScrollBarVisibility="Visible" Text="" MinWidth="510" MinHeight="300"/>
+        <TextBox x:Name="errorArea" Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Margin="5,5,5,10" TextWrapping="NoWrap" Text="" IsReadOnly="True" Background="#FFBFBFBF" Foreground="Red" MinWidth="510" MinHeight="100"/>
+        <TextBox x:Name="outputArea" Grid.Column="1" Grid.ColumnSpan="2" Margin="5,8,5,5" TextWrapping="NoWrap" Text="" IsReadOnly="True" Background="#FFBFBFBF" Grid.RowSpan="2" MinWidth="250" MinHeight="370"/>
+        <Button x:Name="symbolButton" Grid.Column="2" Grid.Row="2" Content="Symbol table" HorizontalAlignment="Center" Margin="5,0,0,0" VerticalAlignment="Center" RenderTransformOrigin="0.979,0.429" Click="symbolButton_Click" IsEnabled="False" MinWidth="100" MinHeight="30"/>
+        <Button x:Name="compileButton" Grid.Column="1" Content="Compile" HorizontalAlignment="Center" Margin="5,0,0,0" VerticalAlignment="Center" Click="Compile_Button_Click" Grid.Row="2" MinWidth="100" MinHeight="30"/>
 
     </Grid>
 
